fixed h4s on mobile when subheaders are stacked on subheaders

--- a/source/stylesheets/_typography.scss
+++ b/source/stylesheets/_typography.scss
@@ -49,7 +49,7 @@ h3 {
 }
 
 h4 {
-  font-size: modular-scale(-2, $h4-font-size);
+  font-size: modular-scale(-4, $h4-font-size);
   margin: 0 0 modular-scale(-2);
   color: $medium-gray;
   @include media($desktop) {
@@ -67,6 +67,9 @@ h4 {
 
   &.subheader {
     margin-top: -1 * modular-scale(0);
+    & + .subheader {
+      margin-top: 0;
+    }
   }
 }
 
